--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "express": "^4.19.2"
   },
   "devDependencies": {
-    "mocha": "^9.0.0"
+    "mocha": "^9.0.0",
+    "supertest": "^6.1.6"
   }
 }
