--- a/package.json
+++ b/package.json
@@ -6,14 +6,14 @@
   "scripts": {
     "test": "mocha test.js"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
   "dependencies": {
-    "express": "^4.19.2"
+    "express": "^4.17.1",
+    "supertest": "^6.1.6"
   },
   "devDependencies": {
-    "mocha": "^9.0.0",
-    "supertest": "^6.1.6"
-  }
+    "mocha": "^9.0.0"
+  },
+  "author": "",
+  "license": "ISC"
 }
+
