--- a/package.json
+++ b/package.json
@@ -8,10 +8,8 @@
   },
   "dependencies": {
     "express": "^4.17.1",
+    "mocha": "^9.0.0",
     "supertest": "^6.1.6"
-  },
-  "devDependencies": {
-    "mocha": "^9.0.0"
   },
   "author": "",
   "license": "ISC"
