--- a/package.json
+++ b/package.json
@@ -10,10 +10,10 @@
     "express": "^4.17.1"
   },
   "devDependencies": {
-    "jest": "^27.0.0",
-    "@babel/core": "^7.14.0",
-    "@babel/preset-env": "^7.14.1",
-    "babel-jest": "^27.0.0"
+    "@babel/core": "^7.24.7",
+    "@babel/preset-env": "^7.24.7",
+    "babel-jest": "^27.5.1",
+    "jest": "^27.0.0"
   },
   "jest": {
     "transform": {
