--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
   },
   "jest": {
     "transform": {
-      "^.+\\.js$": "babel-jest"
+      "^.+\\.jsx?$": "babel-jest"
     }
   },
   "author": "",
