--- a/package.json
+++ b/package.json
@@ -1,21 +1,20 @@
 {
-  "name": "nodejs-docker-jenkins-pipelines",
+  "name": "test",
   "version": "1.0.0",
-  "type": "module",
   "description": "",
-  "main": "index.js",
+  "main": "app.js",
   "scripts": {
-    "start": "node index.js",
-    "test": "jest"
+    "test": "mocha tests/integrations --recursive --exit"
   },
+  "keywords": [],
   "author": "",
   "license": "ISC",
-  "devDependencies": {
-    "@babel/preset-env": "^7.22.20",
-    "babel-jest": "^29.7.0",
-    "jest": "^29.7.0"
-  },
   "dependencies": {
-    "express": "^4.18.2"
+    "express": "^4.19.2",
+    "mysql": "^2.18.1"
+  },
+  "devDependencies": {
+    "mocha": "^10.4.0",
+    "supertest": "^7.0.0"
   }
 }
